# CubbyCity

./: .codacy.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  sonar-project.properties
Extensions/CubbyCityConsole/: CMakeLists.txt  main.cpp
Includes/CubbyCity/: CubbyCity.hpp
Includes/CubbyCity/Commons/: CommonUtils.hpp  Constants.hpp  Macros.hpp  Utils.hpp
Includes/CubbyCity/Exporter/: IExporter.hpp  OBJExporter.hpp
Includes/CubbyCity/Geometry/: GeoJSON.hpp  Geometry.hpp  GeometryData.hpp  GeometryUtils.hpp  Tile.hpp  TileUtils.hpp
Includes/CubbyCity/Platform/: CurlDownloader.hpp  DownloadUtils.hpp  Downloader.hpp  IDownloader.hpp  WinDownloader.hpp  WindowsDownloader.hpp
Includes/CubbyCity/Programs/: Program.hpp  ProgramConfig.hpp
Scripts/: Dockerfile.cosmic  Dockerfile.disco  Dockerfile.disco.clang-latest  Dockerfile.disco.gcc-latest  azure_pipelines_build_linux.yml  azure_pipelines_build_windows_vs2017.yml  azure_pipelines_build_windows_vs2019.yml  travis_build_docker.sh  travis_build_sonarcloud.sh
Sources/CubbyCity/: CMakeLists.txt
Sources/CubbyCity/Exporter/: OBJExporter.cpp
Sources/CubbyCity/Geometry/: GeoJSON.cpp  Geometry.cpp
Sources/CubbyCity/Platform/: CurlDownloader.cpp
Sources/CubbyCity/Programs/: Program.cpp
Sources/a/: CMakeLists.txt
Sources/cubbycity/: CMakeLists.txt  CubbyCity.cpp
Sources/cubbycity/Geometry/: Geometry.cpp
Sources/cubbycity/Platform/: WinDownloader.cpp  WindowsDownloader.cpp
Sources/cubbycity/Programs/: Program.cpp
Tests/UnitTests/: CMakeLists.txt
